--- a/public/mobile/css/style.css
+++ b/public/mobile/css/style.css
@@ -211,3 +211,9 @@
     text-align: center;
     margin-top: 1rem;
 }
+.top-nav-bg{
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    padding: .4rem 1rem;
+}
